Add parameter default_pan to configuration file
Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/src/xmp.conf
+++ b/src/xmp.conf
@@ -133,3 +133,8 @@
 # Percentual stereo mixing. Default is 70%.
 #
 #mix = 70
+
+# default_pan = <val>
+# Default pan setting for 4-channel Amiga modules. Default is 100%
+#
+#default_pan = 100
