Add support for libxmp 4.4 player mode setting
Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/src/modules.conf
+++ b/src/modules.conf
@@ -9,25 +9,13 @@
 # amplify = <0|1|2|3>           Amplification factor (default is 1)
 # filter = yes/no               Enable filters (affects IT only)
 # fixloop = yes/no              Use sample loop start value / 2
-# fx9bug = yes/no               Protracker 2.x effect 9 bug emulation
 # interpolation = <method>      Software mixer interpolation
+# mode = <player mode>          Force tracker emulation
 # mono = yes/no                 Mono output
 # mix = value                   Stereo channel separation (0 - 100)
 # reverse = yes/no              Reverse L/R stereo channels
 # vblank = yes/no               Force vblank timing instead of CIA
 
 # "No Mercy" by Alf/VTL (added by Martin Willers)
-[366ec0fa962aebee034aa2dbaa49aaea]
-fx9bug = yes
-
-# mod.souvenir of china
-[93f146aeb758c39d8b5fbc98bf237a43]
-fixloop = yes
-
-# "siedler ii" (added by Daniel Åkerud)
-[70aa034dfb2f1f73d9fdbafe131bb701]
-vblank = yes
-
-# "klisje paa klisje" (added by Kjetil Torgrim Homme)
-[e998012c700eb43af0321711305829b2]
-vblank = yes
+#[366ec0fa962aebee034aa2dbaa49aaea]
+#mode = protracker
