Add configuration file option to set number of mixer voices
Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/src/xmp.conf
+++ b/src/xmp.conf
@@ -94,6 +94,11 @@
 #
 #interpolation = spline
 
+# mixer_voices = <val>
+# Set the maximum number of virtual channels. Default is 128.
+#
+#mixer_voices = 128
+
 
 ##########################################################################
 ####
