Change command line parameter name from classic to amiga
Signed-off-by: Claudio Matsuoka <cmatsuoka@gmail.com>

--- a/src/modules.conf
+++ b/src/modules.conf
@@ -6,7 +6,7 @@
 #
 # [MD5sum]
 # amplify = <0|1|2|3>           Amplification factor (default is 1)
-# classic = yes/no		Enable classic mixer if available
+# amiga = yes/no		Enable Amiga simulation mixer if available
 # filter = yes/no               Enable filters (affects IT only)
 # fixloop = yes/no              Use sample loop start value / 2
 # interpolation = <method>      Software mixer interpolation
