--- a/src/xmp.conf
+++ b/src/xmp.conf
@@ -72,12 +72,11 @@
 #
 #amplify = 1
 
-# classic = <yesno>
-# Enable classic mixer if available. For Amiga 4-channel modules, the
-# classic mixer is modeled after an Amiga 500 with led filter option.
-# Default is disabled.
+# amiga = <yesno>
+# Enable Amiga simulation mixer for Amiga 4-channel modules. The mixer is
+# modeled after an Amiga 500 with led filter option. Default is disabled.
 #
-#classic = no
+#amiga = no
 
 # srate = <val>
 # Sampling rate in hertz. Default is 44100 Hz.
