provide a Makefile.os2 (to be used with Watcom, tested with OpenWatcom 1.9)

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,4 +2,4 @@
 
 SUBDIRS = src
 
-EXTRA_DIST = CREDITS Changelog girl_from_mars.xm
+EXTRA_DIST = CREDITS Changelog girl_from_mars.xm os2/Makefile.os2 os2/unistd.h os2/usleep.c
