--- a/os2/Makefile.os2
+++ b/os2/Makefile.os2
@@ -30,7 +30,7 @@ CFLAGS+= -5s
 AOUT=xmp.exe
 COMPILE=$(CC) $(CFLAGS) $(CPPFLAGS) $(INCLUDES)
 
-OBJ = commands.obj getopt.obj getopt1.obj info.obj main.obj options.obj read_config.obj sound.obj sound_aiff.obj sound_file.obj sound_null.obj sound_wav.obj sound_dart.obj terminal.obj usleep.obj
+OBJ = commands.obj getopt_long.obj info.obj main.obj options.obj read_config.obj sound.obj sound_aiff.obj sound_file.obj sound_null.obj sound_wav.obj sound_dart.obj terminal.obj usleep.obj
 
 all: $(AOUT)
 
