fix xmp-cli not respecting system xmp.conf.
src/Makefile.am defined SYSCONFDIR as ${sysconfdir}, but installed
xmp.conf under ${sysconfdir}//${PACKAGE_NAME}. therefore, changing
the SYSCONFDIR define to reflect reality.

Patch from RedHat rpm repositories. Original bug report:
https://bugzilla.redhat.com/show_bug.cgi?id=1365321

Closes: https://github.com/libxmp/xmp-cli/issues/27

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 # -*- Makefile -*-
 
-AM_CPPFLAGS = -DSYSCONFDIR=\"${sysconfdir}\" ${LIBXMP_CFLAGS} \
+AM_CPPFLAGS = -DSYSCONFDIR=\"${sysconfdir}/${PACKAGE_NAME}\" ${LIBXMP_CFLAGS} \
               ${alsa_CFLAGS} ${pulseaudio_CFLAGS}
 AM_CFLAGS   = -Wall
 
