--- a/Makefile.w32
+++ b/Makefile.w32
@@ -32,14 +32,14 @@ CFLAGS+= -5s
 AOUT=xmp.exe
 COMPILE=$(CC) $(CFLAGS) $(CPPFLAGS) $(INCLUDES)
 
-OBJ = commands.obj getopt_long.obj info.obj main.obj options.obj read_config.obj sound.obj sound_aiff.obj sound_file.obj sound_null.obj sound_wav.obj sound_win32.obj terminal.obj usleep.obj
+OBJ = commands.obj delay.obj getopt_long.obj info.obj main.obj options.obj read_config.obj sound.obj sound_aiff.obj sound_file.obj sound_null.obj sound_wav.obj sound_win32.obj terminal.obj
 
 all: $(AOUT)
 
 $(AOUT): $(OBJ)
 	wlink N $(AOUT) SYS NT OP QUIET LIBR {$(LIBS)} F {$(OBJ)}
 
-.c: src;src/win32
+.c: src
 .c.obj:
 	$(COMPILE) -fo=$^@ $<
 
