add SoundBlaster output driver for DOS based on libMikMod

--- a/configure.ac
+++ b/configure.ac
@@ -125,6 +125,7 @@ AM_CONDITIONAL([SOUND_NETBSD], [false])
 AM_CONDITIONAL([SOUND_OSS], [false])
 AM_CONDITIONAL([SOUND_PULSEAUDIO], [false])
 AM_CONDITIONAL([SOUND_QNX], [false])
+AM_CONDITIONAL([SOUND_SB], [false])
 AM_CONDITIONAL([SOUND_SGI], [false])
 AM_CONDITIONAL([SOUND_SNDIO], [false])
 AM_CONDITIONAL([SOUND_SOLARIS], [false])
@@ -242,6 +243,10 @@ nto-qnx*)
 cygwin*|mingw*)
   AC_DEFINE(SOUND_WIN32, 1, [ ])
   AM_CONDITIONAL([SOUND_WIN32], [true])
+  ;;
+*djgpp)
+  AC_DEFINE(SOUND_SB, 1, [ ])
+  AM_CONDITIONAL([SOUND_SB], [true])
   ;;
 beos*|haiku*)
   AC_DEFINE(SOUND_BEOS, 1, [ ])
