include strings.h, if available, for strcasecmp
it might not be prototyped in strings.h.

--- a/Makefile.w32
+++ b/Makefile.w32
@@ -3,7 +3,7 @@
 # wmake -f Makefile.w32
 
 CC=wcc386
-CPPFLAGS=-DHAVE_SIGNAL_H
+CPPFLAGS=-DHAVE_SIGNAL_H -DHAVE_STRINGS_H
 CPPFLAGS+= -DSOUND_WIN32
 
 !ifndef __UNIX__
