--- a/Makefile.os2
+++ b/Makefile.os2
@@ -3,7 +3,7 @@
 # wmake -f Makefile.os2
 
 CC=wcc386
-CPPFLAGS=-DHAVE_SIGNAL_H
+CPPFLAGS=-DHAVE_SIGNAL_H -DHAVE_STRINGS_H
 CPPFLAGS+= -DSOUND_OS2DART
 
 !ifndef __UNIX__
