add new xmp_version.h which defines VERSION if not already defined.
is useful when working with standalone makefiles and project files.

--- a/vc/xmp.vcproj
+++ b/vc/xmp.vcproj
@@ -39,7 +39,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\src;..\src\win32"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;VERSION=\&quot;4.2.0\&quot;;SOUND_WIN32"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;SOUND_WIN32"
 				ExceptionHandling="0"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
