--- a/Makefile.os2
+++ b/Makefile.os2
@@ -9,6 +9,7 @@
 !ifndef target
 target = dll
 !endif
+# change libxmp_path as needed (or specify on the wmake cmdline)
 !ifndef libxmp_path
 libxmp_path = ../libxmp
 !endif
@@ -18,7 +19,7 @@ SYSTEM=os2v2
 
 CPPFLAGS=-DHAVE_SIGNAL_H -DHAVE_STRINGS_H
 CPPFLAGS+= -DSOUND_OS2DART
-INCLUDES=-I"src/watcom" -Isrc -I"$(%WATCOM)/h" -I"$(%WATCOM)/h/os2"
+INCLUDES=-I"src/watcom" -Isrc -I"$(%WATCOM)/h/os2" -I"$(%WATCOM)/h"
 
 !ifeq target static
 CPPFLAGS+= -DBUILDING_STATIC
