--- a/Makefile.dos
+++ b/Makefile.dos
@@ -3,6 +3,7 @@
 # wmake -f Makefile.dos
 # - builds using the static library xmp_static.lib
 #
+target = static
 # change libxmp_path as needed (or specify on the wmake cmdline)
 !ifndef libxmp_path
 libxmp_path = ../libxmp
@@ -12,40 +13,12 @@ CC=wcc386
 # SYSTEM can be dos32a, causeway or dos4g:
 SYSTEM=dos32a
 
-CPPFLAGS=-DHAVE_SIGNAL_H -DHAVE_STRINGS_H
-
-INCLUDES=-I"src/watcom" -Isrc -I"$(%WATCOM)/h"
-
-CPPFLAGS+= -DBUILDING_STATIC
-LIBXMP=$(libxmp_path)/xmp_static.lib
-INCLUDES+= -I"$(libxmp_path)/include"
-LIBS=$(LIBXMP)
-
 CFLAGS = -bt=dos -fp5 -fpi87 -mf -oeatxh -w4 -zp8 -ei -q
 # newer OpenWatcom versions enable W303 by default.
 CFLAGS += -wcd=303
 # -5s  :  Pentium stack calling conventions.
 # -5r  :  Pentium register calling conventions.
-CFLAGS+= -5s
+CFLAGS += -5s
+INCLUDES = -I"src/watcom" -I"$(%WATCOM)/h"
 
-.SUFFIXES:
-.SUFFIXES: .obj .c
-
-AOUT=xmp.exe
-COMPILE=$(CC) $(CFLAGS) $(CPPFLAGS) $(INCLUDES)
-
-OBJ = commands.obj delay.obj getopt_long.obj info.obj main.obj options.obj read_config.obj sound.obj sound_aiff.obj sound_file.obj sound_null.obj sound_wav.obj terminal.obj
-
-all: $(AOUT)
-
-$(AOUT): $(OBJ) $(LIBXMP)
-	wlink N $(AOUT) SYS $(SYSTEM) OP QUIET LIBR {$(LIBS)} F {$(OBJ)}
-
-.c: src;src/dos
-.c.obj:
-	$(COMPILE) -fo=$^@ $<
-
-distclean: clean .symbolic
-	rm -f $(AOUT) *.err
-clean: .symbolic
-	rm -f *.obj
+!include watcom.mif
