--- a/Makefile.am
+++ b/Makefile.am
@@ -2,4 +2,4 @@
 
 SUBDIRS = src
 
-EXTRA_DIST = CREDITS Changelog girl_from_mars.xm Makefile.os2 Makefile.w32
+EXTRA_DIST = CREDITS Changelog girl_from_mars.xm Makefile.dos Makefile.os2 Makefile.w32 watcom.mif
