include autogen.sh and vc/* with 'make dist'

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,4 +2,6 @@
 
 SUBDIRS = src
 
-EXTRA_DIST = CREDITS Changelog girl_from_mars.xm Makefile.dos Makefile.os2 Makefile.w32 watcom.mif
+EXTRA_DIST = CREDITS Changelog autogen.sh girl_from_mars.xm    \
+	     Makefile.dos Makefile.os2 Makefile.w32 watcom.mif \
+	     vc/xmp.vcproj vc/xmp.sln
