check and conditionally include sys/types.h, sys/time.h, and unistd.h.
watcom/unistd.h and win32/unistd.h are no longer necessary, especially
after previous commit.

--- a/Makefile.dos
+++ b/Makefile.dos
@@ -19,7 +19,7 @@ CFLAGS += -wcd=303
 # -5s  :  Pentium stack calling conventions.
 # -5r  :  Pentium register calling conventions.
 CFLAGS += -5s
-INCLUDES = -I"src/watcom" -I"$(%WATCOM)/h"
+INCLUDES = -I"$(%WATCOM)/h"
 
 # for sound_sb:
 CPPFLAGS+= -DSOUND_SB
