--- a/configure.ac
+++ b/configure.ac
@@ -99,7 +99,7 @@ AC_DEFUN([AC_CHECK_DEFINED],[
   AS_VAR_POPDEF([ac_var])dnl
 ])
 
-AC_CHECK_HEADERS([getopt.h signal.h sys/select.h sys/time.h sys/audioio.h])
+AC_CHECK_HEADERS([sys/types.h unistd.h getopt.h signal.h sys/select.h sys/time.h sys/audioio.h])
 case $host_os in
 dnl don't check half-baked termios for amiga or dos targets.
   amigaos*|aros*|morphos*|*djgpp) ;;
