--- a/Makefile.w32
+++ b/Makefile.w32
@@ -23,7 +23,7 @@ CFLAGS += -wcd=303
 # -5s  :  Pentium stack calling conventions.
 # -5r  :  Pentium register calling conventions.
 CFLAGS += -5s
-INCLUDES = -I"src/win32" -I"$(%WATCOM)/h/nt" -I"$(%WATCOM)/h"
+INCLUDES = -I"$(%WATCOM)/h/nt" -I"$(%WATCOM)/h"
 
 # for sound_win32:
 CPPFLAGS = -DSOUND_WIN32
