--- a/vc/xmp.vcproj
+++ b/vc/xmp.vcproj
@@ -38,7 +38,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\src;..\src\win32"
+				AdditionalIncludeDirectories="..\src"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;SOUND_WIN32"
 				ExceptionHandling="0"
 				RuntimeLibrary="2"
