move xmp_strdup() into a new util.c source module.

--- a/vc/xmp.vcproj
+++ b/vc/xmp.vcproj
@@ -163,6 +163,10 @@
 				RelativePath="..\src\terminal.c"
 				>
 			</File>
+			<File
+				RelativePath="..\src\util.c"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
